# xray-panel

./: .gitignore  AUTOMATIC_SYNC_README.md  CHANGELOG_API.md  EXTERNAL_API_QUICKSTART.md  LICENSE  QUICK_START_RU.md  README.md  README_RU.md  START_PANEL.sh  add_node_command.sh  create_all_protocols.sh  git-commit.sh  update-remote-node.sh  КОМАНДЫ_ДЛЯ_PUSH.sh
backend/: .env.example  API_DOCUMENTATION.md  Dockerfile  FINAL_STATUS.md  README.md  create_missing_proxies.py  fix_proxy_types.py  fix_reality_and_vmess.py  fix_reality_generate_pubkey.py  fix_reality_pubkey_correct.py  generate_new_reality_keypair.py  generate_reality_pubkey.py  pyproject.toml  show_subscription_links.py  start_api.sh  sync_singbox.py  validate_active_users.py
backend/alembic/: env.py
backend/alembic/versions/: 004_add_api_keys.py  493d3e718f32_add_block_torrents_to_inbound_and_max_.py  692281e7034b_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py  external_deps.py
backend/app/api/v1/: router.py  router_external.py
backend/app/cli/: main.py
backend/app/core/: api_key_manager.py  config.py  rate_limiter.py  security.py
backend/app/db/: __init__.py  base.py
backend/app/grpc_gen/: __init__.py  node_pb2.py  node_pb2_grpc.py
backend/app/models/: __init__.py  admin.py  api_key.py  audit.py  inbound.py  node.py  settings.py  stats.py  user.py  webhook.py
backend/app/schemas/: __init__.py  admin.py  auth.py  inbound.py  node.py  user.py
backend/app/utils/: node_compatibility.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: fix_reality.sh
(+83 files in other folders)
